--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+    
+    lint {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -47,6 +51,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
